# twitter-bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: github_api.py  main.py  tweet.py  twitter_api.py
src/twitter_bot/: main.py
tests/: test_tweet.py
