[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter_bot"
authors = [{ name = "t63065488" }]
description = "A simple bot to parse and post a tweet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tweepy==4.14.0", "python-dotenv==1.0.0", "PyGithub==2.1.1"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest==7.4.3", "pytest-mock==3.12.0"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
